--- a/JavaScript/js_practise.html
+++ b/JavaScript/js_practise.html
@@ -291,20 +291,36 @@
             content.appendChild(table);
         }
 
-        function alertJson(){
+        function alertJson() {
             var name = document.getElementById("i_name").value;
             var select = document.getElementById("s_team");
-            var teamIndex= select.selectedIndex;
+            var teamIndex = select.selectedIndex;
             var team = select[teamIndex].value;
             var number = document.getElementById("i_number").value;
             var player = new Player(name, team, number);
             alert(JSON.stringify(player));
         }
 
-        function Player(name, team, number){
+        function Player(name, team, number) {
             this.name = name;
             this.team = team;
             this.number = number;
+        }
+
+        var xmlhttp;
+        function check() {
+            var name = document.getElementById("check_name");
+            var url = "http://how2j.cn/study/checkName.jsp?name="+name.value;
+            xmlhttp = new XMLHttpRequest();
+            xmlhttp.onreadystatechange = checkResult;
+            xmlhttp.open('GET', url);
+            xmlhttp.send();
+        }
+
+        function checkResult(){
+            if(xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                document.getElementById("checkResult").innerHTML = xmlhttp.responseText;
+            }
         }
 
     </script>
@@ -406,11 +422,31 @@
     <button onclick="generateTableByJS()">生成表格</button>
     <div id="table_js"></div>
     <div>
-        姓名<input id="i_name" type="text"><br/>
-        球队<select id="s_team"><option value="洛杉矶湖人">洛杉矶湖人</option value="芝加哥公牛"><option>芝加哥公牛</option><option value="休斯顿火箭">休斯顿火箭</option></select>
-        <br/>
-        号码<input id="i_number" type="number"><br/>
+        姓名<input id="i_name" type="text"><br />
+        球队<select id="s_team">
+            <option value="洛杉矶湖人">洛杉矶湖人</option value="芝加哥公牛">
+            <option>芝加哥公牛</option>
+            <option value="休斯顿火箭">休斯顿火箭</option>
+        </select>
+        <br />
+        号码<input id="i_number" type="number"><br />
         <button onclick="alertJson()">生成json字符串</button>
+    </div>
+    <div>
+        <a href="http://how2j.cn/study/checkName.jsp?name=abc">验证用户名abc</a>
+        <br>
+        <a href="http://how2j.cn/study/checkName.jsp?name=def">验证用户名def</a>
+    </div>
+    <div>
+        <form action="http://how2j.cn/study/checkName.jsp">
+            用户名<input type="text" name="name"><input type="submit" value="验证" />
+        </form>
+    </div>
+    <h1>AJAX验证</h1>
+    <div>
+        <span>输入账号:</span>
+        <input id="check_name" onkeyup="check()" type="text" />
+        <span id="checkResult"></span>
     </div>
 </body>
 
