--- a/JavaScript/vue_test.html
+++ b/JavaScript/vue_test.html
@@ -77,19 +77,24 @@
     computed 是有缓存的，只要rmb没有变化，dollar 会直接返回以前计算出来的值，而不会再次计算。 这样如果是复杂计算，就会节约不少时间。
     而methods每次都会调用
     <div id="div_calc">
-        <table border="1" >
+        <table border="1">
             <tr style="background-color: darkgray">
-            <td style="width:50%; text-align: center">人民币</td>
-            <td style="width:50%; text-align: center">美元</td>
+                <td style="width:50%; text-align: center">人民币</td>
+                <td style="width:50%; text-align: center">美元</td>
             </tr>
             <tr>
-                <td style="text-align: center" colspan="2">汇率: <input type="number" v-model.number="exchange"/></td>
+                <td style="text-align: center" colspan="2">汇率: <input type="number" v-model.number="exchange" /></td>
             </tr>
             <tr>
-                <td>￥: <input type="number" v-model.number="rmb"/></td>
+                <td>￥: <input type="number" v-model.number="rmb" /></td>
                 <td>$: <span>{{dollar}}</span></td>
             </tr>
         </table>
+    </div>
+    <div id="div_components">
+        <product></product>
+        <product></product>
+        <product></product>
     </div>
     <script>
         var kobe = { "name": "Kobe", "number": "24" };
@@ -165,11 +170,19 @@
             el: "#div_calc",
             data: {
                 rmb: 0,
-                exchange:7.0
+                exchange: 7.0
             },
             computed: {
-                dollar: function(){
+                dollar: function () {
                     return this.rmb / this.exchange;
+                }
+            }
+        });
+        new Vue({
+            el: "#div_components",
+            components:{
+                'product':{
+                    template: '<div class="product">Xiaomi/小米Redmi红米Note7大屏智能指纹手机9官方旗舰k20正品学生note7pro</div>'
                 }
             }
         });
