--- a/JavaScript/vue_test.html
+++ b/JavaScript/vue_test.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Vue练习</title>
     <script src="./jquery-3.4.1.js"></script>
+    <script src="http://how2j.cn/study/fetch.min.js"></script>
     <link href="./bootstrap.css" rel="stylesheet">
     <script src="./bootstrap.js"></script>
-    <script src="./vue.js"></script>    
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>    
+    <script src="./vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <style>
         .red {
             background-color: red
@@ -224,21 +225,22 @@
 
     <h1>路由</h1>
     <style>
-        div.tabs{
+        div.tabs {
             border: 1px solid black;
             float: left;
             text-align: center
         }
-        div.tabs a{
+
+        div.tabs a {
             display: block;
             text-decoration: none
         }
 
-        a.router-link-active{
+        a.router-link-active {
             background-color: lightgray
         }
 
-        div.content{
+        div.content {
             float: left;
             margin-left: 20px
         }
@@ -258,14 +260,14 @@
     </div>
 
     <script>
-        var user = {template: '<p>个人中心页面</p>'};
-        var post = {template: '<p>朋友圈页面</p>'};
-        var msg = {template: '<p>消息页面</p>'};
+        var user = { template: '<p>个人中心页面</p>' };
+        var post = { template: '<p>朋友圈页面</p>' };
+        var msg = { template: '<p>消息页面</p>' };
         var routes = [
-            {path: '/', redirect: '/user'},
-            {path: '/user', component: user},
-            {path: '/post', component: post},
-            {path: '/msg', component: msg}
+            { path: '/', redirect: '/user' },
+            { path: '/user', component: user },
+            { path: '/post', component: post },
+            { path: '/msg', component: msg }
         ];
         var router = new VueRouter({
             routes: routes
@@ -274,6 +276,25 @@
             el: "#app",
             router
         });
+    </script>
+
+    <div style="clear: both">
+        <h1>fetch.js</h1>
+        <div id="fetch_result"></div>
+    </div>
+
+    <script>
+        var url = "http://static.how2j.cn/study/json.txt";
+        try {
+            fetch(url).then(function (response) {
+                response.json().then(function (jsonObject) {
+                    var result = JSON.stringify(jsonObject);
+                    document.getElementById('fetch_result').innerHTML = "fetch 的数据" + result;
+                });
+            });
+        } catch (err) {
+            console.log("Fetch错误:" + err);
+        }
     </script>
 </body>
 
