retrieve all heros from mysql database

--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -10,8 +10,9 @@
     </style>
 </head>
 <body>
-    <a href="hello">HelloServlet</a>
+    <a href="hello">Hello</a>
     <a href="login.html">登录</a>
     <a href="upload.html">上传文件</a>
+    <a href="hero">查询数据库的英雄</a>
 </body>
 </html>
