--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -14,5 +14,6 @@
     <a href="login.html">登录</a>
     <a href="upload.html">上传文件</a>
     <a href="hero">查询数据库的英雄</a>
+    <a href="hello.jsp">Hello JSP</a>
 </body>
 </html>
