--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -15,5 +15,6 @@
     <a href="upload.html">上传文件</a>
     <a href="hero">查询数据库的英雄</a>
     <a href="hello.jsp">Hello JSP</a>
+    <a href="setCookie.jsp">JSP Cookie</a>
 </body>
 </html>
