--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -16,5 +16,6 @@
     <a href="hero">查询数据库的英雄</a>
     <a href="hello.jsp">Hello JSP</a>
     <a href="setCookie.jsp">JSP Cookie</a>
+    <a href="setSession.jsp">JSP Session</a>
 </body>
 </html>
