--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -17,5 +17,6 @@
     <a href="hello.jsp">Hello JSP</a>
     <a href="setCookie.jsp">JSP Cookie</a>
     <a href="setSession.jsp">JSP Session</a>
+    <a href="jstl.jsp">JSTL JSP</a>
 </body>
 </html>
