--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -18,5 +18,6 @@
     <a href="setCookie.jsp">JSP Cookie</a>
     <a href="setSession.jsp">JSP Session</a>
     <a href="jstl.jsp">JSTL JSP</a>
+    <a href="testSessionListener.jsp">测试Session Listener</a>
 </body>
 </html>
