list of product

--- a/SodaTMallServer/web/index.html
+++ b/SodaTMallServer/web/index.html
@@ -19,5 +19,6 @@
     <a href="setSession.jsp">JSP Session</a>
     <a href="jstl.jsp">JSTL JSP</a>
     <a href="testSessionListener.jsp">测试Session Listener</a>
+    <a href="listProduct">购物车</a>
 </body>
 </html>
